Minor changes, rename schema to namespace in catalog info page